# Finance-Guru

./: .gitignore  .importlinter  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRIVACY.md  README.md  codecov.yml  justfile  package.json  pyproject.toml  release-please-config.json  requirements.txt  turbo.json
.agents/skills/: FinanceReport  MonteCarlo  PortfolioSyncing  TransactionSyncing  dividend-tracking  fin-core  fin-guru-checklist  fin-guru-compliance-review  fin-guru-create-doc  fin-guru-learner-profile  fin-guru-quant-analysis  fin-guru-research  fin-guru-strategize  formula-protection  margin-management  retirement-syncing
.agents/skills/coding-tutor/scripts/: create_tutorial.py  index_tutorials.py  quiz_priority.py  setup_tutorials.py
.agents/skills/gemini-imagegen/scripts/: compose_images.py  edit_image.py  gemini_images.py  generate_image.py  multi_turn_chat.py
.agents/skills/opentui/references/components/: code-diff.md  containers.md  text-display.md
.agents/skills/opentui/references/core/: api.md  configuration.md  gotchas.md  patterns.md
.agents/skills/opentui/references/keyboard/: REFERENCE.md
.agents/skills/opentui/references/react/: api.md  configuration.md
.agents/skills/opentui/references/solid/: api.md  configuration.md  gotchas.md  patterns.md
.claude/: settings.json
.claude/agents/: fg-builder.md  fg-dividend-specialist.md  fg-finance-orchestrator.md  fg-strategy-advisor.md
.claude/commands/fin-guru/agents/: builder.md  dividend-specialist.md  finance-orchestrator.md  strategy-advisor.md
.claude/skills/MonteCarlo/: SKILL.md
.claude/skills/MonteCarlo/workflows/: IncorporateBuyTicket.md
.claude/skills/PortfolioSyncing/: SKILL.md
.claude/skills/PortfolioSyncing/workflows/: IngestPositions.md  SyncPortfolio.md
.claude/skills/TransactionSyncing/: SKILL.md
.claude/skills/TransactionSyncing/workflows/: IngestTransactions.md
.claude/skills/fin-guru-create-doc/: SKILL.md
.cursor/skills/: create-agent-skills  resolve_pr_parallel
.dev/: sdk-notes.md
.devcontainer/: README.md  devcontainer.json
.github/: branch-protection.yml  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.md
.github/workflows/: ci.yml  error-to-issue.yml  quality-gates.yml  release.yml  rollback.yml  sync-labels.yml  validate-agents-md.yml
.memory/notes/: automated-buy-ticket-agent-architecture.md
apps/plaid-dashboard/dashboard/: package.json
apps/plaid-dashboard/db/: package.json
apps/plaid-dashboard/engine/: package.json
apps/simplefin-sync/: .env.example  package.json
apps/simplefin-sync/src/: accounts.ts  claim.ts  client.ts  types.ts
docs/: CONTRIBUTING.md  VISION.md  index.md
docs/brainstorms/: 2026-02-20-markdown-rendering-brainstorm.md  2026-02-20-selection-ux-interaction-spec.md
docs/reference/: cross-harness-skills.md  observability.md
docs/reports/: MANUAL_TEST_CHECKLIST.md
docs/runbooks/: README.md  margin-dashboard-update.md  monthly-dividend-review.md  portfolio-sync.md  quarterly-review.md
docs/setup/: SETUP.md
docs/solutions/architecture-decisions/: standalone-sdk-tui-FinanceGuru-20260219.md
fin-guru/: README.md
fin-guru/agents/: agent-template.md  builder.md  dividend-specialist.md  finance-orchestrator.md  margin-specialist.md  market-researcher.md  onboarding-specialist.md  qa-advisor.md  quant-analyst.md  strategy-advisor.md
fin-guru/tasks/: create-doc.md
fin-guru/templates/: buy-ticket-template.md
fin-guru/workflows/audit/: workflow.yaml
fin-guru/workflows/coordinate/: workflow.yaml
fin-guru/workflows/route-to-agent/: workflow.yaml
finance-guru-desktop/: bunfig.toml  main.js  package.json  preload.js  renderer.js
finance-guru-desktop/docs/contracts/: analysis-contracts.md
finance-guru-desktop/scripts/: build-renderer.js
finance-guru-desktop/src/main/config/: runtimePaths.js  validateRuntime.js
finance-guru-desktop/src/main/ipc/: analysis.ipc.js  chat.ipc.js  csv.ipc.js  index.js
finance-guru-desktop/src/renderer/state/: State.js  portfolio.state.js
finance-guru-desktop/src/renderer/ui/: CommandPalette.js  Modal.js
finance-guru-desktop/tests/fixtures/analysis/: correlation.json  options-chain.json  risk-metrics.json  total-return.json
finance-guru-desktop/tests/main/config/: validateRuntime.test.js
finance-guru-desktop/tests/main/ipc/: analysis.ipc.test.js  chat.ipc.test.js  csv.ipc.test.js
monitoring/: alerts.yml
scripts/onboarding/modules/templates/: CLAUDE.template.md
scripts/onboarding/tests/: .gitkeep
src/analysis/: hedge_sizer.py  rolling_tracker.py  rolling_tracker_cli.py  total_return.py
src/utils/: feature_flags.py  logging.py
tests/integration/: gitignore-protection.test.ts  test_gitignore_protection.sh
tests/python/: test_hedge_sizer.py  test_no_hardcoded_references.py  test_rolling_tracker.py  test_total_return.py
